--- a/scss/components/_scrubber-bar.scss
+++ b/scss/components/_scrubber-bar.scss
@@ -56,7 +56,7 @@
     }
 
     .oo-played-ad-indicator {
-      background: #FF3F80;
+      background: rgba(218, 206, 44, 0.9);
     }
 
     .oo-playhead-padding {
